--- a/style.css
+++ b/style.css
@@ -16,10 +16,13 @@ body {
   font-weight: 400;
 }
 
+/* navbar */
+
 .navbar {
   background-color: #1f2937;
   color: #fff;
   padding: 2rem;
+  padding-bottom: 8rem;
 }
 
 .navbar .container {
@@ -47,4 +50,61 @@ body {
   font-size: 1.8rem;
   color: #e5e7eb;
   text-decoration: none;
+}
+
+/* header section */
+
+.header {
+  background-color: #1f2937;
+  color: #fff;
+  padding: 2rem;
+  padding-bottom: 14rem;
+}
+
+.header .container {
+  max-width: 110rem;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 4rem;
+}
+
+.header .container > * {
+  flex: 1;
+}
+
+.heading-primary {
+  font-size: 4.8rem;
+  font-weight: 900;
+  margin-bottom: 1rem;
+}
+
+.header .paragraph {
+  margin-bottom: 2rem;
+}
+
+.header .paragraph,
+.header .button {
+  font-size: 1.8rem;
+  color: #e5e7eb;
+}
+
+.header .button {
+  text-decoration: none;
+  padding: 0.8rem 2.6rem;
+  background-color: #3882f6;
+  border-radius: 10px;
+  display: inline-block;
+  font-weight: 700;
+}
+
+.header-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(229, 231, 235, 0.377);
+  padding: 12rem 8rem;
+  font-size: 1.8rem;
+  color: #e5e7eb;
 }
