--- a/style.css
+++ b/style.css
@@ -177,3 +177,34 @@ body {
   margin-left: auto;
   width: max-content;
 }
+
+/* cta section */
+
+/* .cta-section {
+} */
+
+.cta-section .container {
+  max-width: 110rem;
+  margin: 10rem auto;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #3882f6;
+  padding: 5rem 4rem;
+  border-radius: 10px;
+  color: #e5e7eb;
+}
+
+.cta-section .button {
+  text-decoration: none;
+  padding: 0.8rem 3rem;
+  border: 2px solid #e5e7eb;
+  color: #e5e7eb;
+  border-radius: 10px;
+  display: inline-block;
+  font-weight: 700;
+}
+
+.heading-tertiary {
+  font-size: 2.2rem;
+}
