--- a/style.css
+++ b/style.css
@@ -208,3 +208,11 @@ body {
 .heading-tertiary {
   font-size: 2.2rem;
 }
+
+/* footer */
+.footer {
+  background-color: #1f2937;
+  text-align: center;
+  color: #e5e7eb;
+  padding: 4rem;
+}
